--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,27 @@
 
 <body>
     <canvas class="webgl-canvas"></canvas>
+    <div class="intro">
+        <h1 class="name" style="color: rgb(255, 255, 255);">
+            Rodrigo Cury
+        </h1>
+        <p class="subtitle" style="color: rgb(160, 160, 160);">
+            Desenvolvedor FullStack &amp; Biotecnologista
+        </p>
+    </div>
+
+    <div class="menu-btn tech">
+        <p class="menu-p">
+            Tecnologias
+        </p>
+    </div>
+
+    <div class="menu-btn about">
+        <p class="menu-p">
+            Sobre
+        </p>
+    </div>
+
 </body>
 
 </html>
