Added All menu DIV's

--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,37 @@
         </p>
     </div>
 
+    <div class="menu-btn home selected">
+        <p class="menu-p">
+            Home
+        </p>
+    </div>
+
     <div class="menu-btn tech">
         <p class="menu-p">
             Tecnologias
         </p>
     </div>
 
-    <div class="menu-btn about">
+    <div class="menu-btn projects">
         <p class="menu-p">
-            Sobre
+            Projetos
         </p>
     </div>
+
+    <div class="menu-btn whoami">
+        <p class="menu-p">
+            Quem sou
+        </p>
+    </div>
+
+    <div class="menu-btn contact">
+        <p class="menu-p">
+            Contato
+        </p>
+    </div>
+
+
 
 </body>
 
