animations for some DOMElements

--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <canvas class="webgl-canvas"></canvas>
-    <div class="intro">
+    <!-- <div class="intro">
         <h1 class="name" style="color: rgb(255, 255, 255);">
             Rodrigo Cury
         </h1>
         <p class="subtitle" style="color: rgb(160, 160, 160);">
             Desenvolvedor FullStack &amp; Biotecnologista
         </p>
-    </div>
+    </div> -->
 
     <div class="menu-btn home selected">
         <p class="menu-p">
