remade Menu System

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,21 @@
 <body>
     <canvas class="webgl-canvas"></canvas>
 
+    <div class='home'>
+        <h1 class='home-text'>Rodrigo Cury</h1>
+    </div>
+
+    <div class="content">
+        <div class="content__container">
+            <ul class="content__container__list">
+                <li class="content__container__list__item">Dev</li>
+                <li class="content__container__list__item">Front-End 3D</li>
+                <li class="content__container__list__item">Back-End</li>
+                <li class="content__container__list__item">Biotechnology</li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 
 </html>
