Added Menu items

--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,28 @@
 <body>
     <canvas class="webgl-canvas"></canvas>
 
-    <div class='home'>
-        <h1 class='home-text'>Rodrigo Cury</h1>
+    <div class='menu'>
+        <ul class="menu-list">
+            <li class="menu-btn selected" id="0">Home</li>
+            <li class="menu-btn" id="1">Tech</li>
+            <li class="menu-btn" id="2">Projects</li>
+        </ul>
     </div>
 
-    <div class="content">
-        <div class="content__container">
-            <ul class="content__container__list">
-                <li class="content__container__list__item">Dev</li>
-                <li class="content__container__list__item">Front-End 3D</li>
-                <li class="content__container__list__item">Back-End</li>
-                <li class="content__container__list__item">Biotechnology</li>
-            </ul>
+    <div class='homepage'>
+        <div class='home'>
+            <h1 class='home-text'>Rodrigo Cury</h1>
+        </div>
+
+        <div class="content">
+            <div class="content__container">
+                <ul class="content__container__list">
+                    <li class="content__container__list__item">Dev</li>
+                    <li class="content__container__list__item">Front-End 3D</li>
+                    <li class="content__container__list__item">Back-End</li>
+                    <li class="content__container__list__item">Biotechnology</li>
+                </ul>
+            </div>
         </div>
     </div>
 
