--- a/src/index.html
+++ b/src/index.html
@@ -15,31 +15,99 @@
 <body>
     <canvas class="webgl-canvas"></canvas>
 
-    <div class='menu'>
-        <ul class="menu-list">
-            <li class="menu-btn selected" id="0">Home</li>
-            <li class="menu-btn" id="1">Tech</li>
-            <li class="menu-btn" id="2">Projects</li>
-        </ul>
-    </div>
-
     <div class='homepage'>
         <div class='home'>
-            <h1 class='home-text'>Rodrigo Cury</h1>
+            <h1 class="home-text unselectable">Rodrigo Cury</h1>
         </div>
-
         <div class="content">
             <div class="content__container">
                 <ul class="content__container__list">
-                    <li class="content__container__list__item">Dev</li>
-                    <li class="content__container__list__item">Front-End 3D</li>
-                    <li class="content__container__list__item">Back-End</li>
-                    <li class="content__container__list__item">Biotechnology</li>
+                    <li class="content__container__list__item unselectable">Dev</li>
+                    <li class="content__container__list__item unselectable">Front-End 3D</li>
+                    <li class="content__container__list__item unselectable">Back-End</li>
+                    <li class="content__container__list__item unselectable">Biotechnology</li>
                 </ul>
             </div>
         </div>
     </div>
 
+    <div class='whoami'>
+        <div class='whoami-container'>
+            <h1 class="unselectable">Rodrigo é</h1>
+            <p class="unselectable">Desenvolvedor Júnior</p>
+            <p class="unselectable">Frontend em ambientes 3D</p>
+            <p class="unselectable">e Backend</p>
+        </div>
+        <div class='whoami-container'>
+            <h1 class="unselectable">Estudo</h1>
+            <p class="unselectable">Biotecnologia na Universidade Federal de Uberlândia.</p>
+            <p class="unselectable">Autodidata em desenvolvimento Web e em modelagem 3D.</p>
+        </div>
+        <div class='whoami-container'>
+            <h1 class="unselectable">Um pouco sobre mim</h1>
+            <p class="unselectable">
+                Me apaixonei por código na faculdade e desde então me dediquei a aprender mais e
+                mais no meu tempo livre.
+            </p>
+            <p class='unselectable'>
+                Desde pequeno fui apaixonado por Cinema, Animações, Livros, Música, Podcasts
+            </p>
+            <p class='unselectable'>
+                e intrigado pelo universo e biologia.
+            </p>
+        </div>
+
+
+    </div>
+
+    <div class='projects-container'>
+        <div class='project-card'>
+            <div class='spine'></div>
+            <img
+                class='project-logo'
+                src="/static/imgs/coin.png">
+            <div class='project-links'>
+                <H1 class='project-title unselectable'>Controle de Estoque de Leveduras</H1>
+                <p class='project-description unselectable'> Ferramenta de controle de estoque de leveduras da Coin Brewery</p>
+
+                <div class='project-btns'>
+                        <p class='btn-p unselectable'>+ informações</p>
+                </div>
+            </div>
+        </div>
+        <div class='project-card'>
+            <div class='spine'></div>
+            <img
+                class='project-logo'
+                src="/static/imgs/bioinformatizado.jpg">
+            <div class='project-links'>
+                <H1 class='project-title unselectable'>Bioinformatizado</H1>
+                <p class='project-description unselectable'> 
+                    Blog com com Backend em Django usado como um log das coisas que aprendi em bioinformática
+                </p>
+
+                <div class='project-btns'>
+                        <p class='btn-p unselectable'>+ informações</p>
+                </div>
+            </div>
+        </div>
+        <div class='project-card'>
+            <div class='spine'></div>
+            <img
+                class='project-logo'
+                src="/static/imgs/bioinfo-project-logo.png">
+            <div class='project-links'>
+                <H1 class='project-title unselectable'>Projeto de Bioinformática</H1>
+                <p class='project-description unselectable'> 
+                    Site com ferramentas de bioinformática para tradução e alinhamento de sequências genéticas. Projeto em andamento ainda
+                </p>
+
+                <div class='project-btns'>
+                        <p class='btn-p unselectable'>+ informações</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
