Rm .unselectable classes

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
 
     <div class='homepage'>
         <div class='home'>
-            <h1 class="home-text unselectable">Rodrigo Cury</h1>
+            <h1 class="home-text ">Rodrigo Cury</h1>
         </div>
         <div class="content">
             <div class="content__container">
                 <ul class="content__container__list">
-                    <li class="content__container__list__item unselectable">Dev</li>
-                    <li class="content__container__list__item unselectable">Front-End 3D</li>
-                    <li class="content__container__list__item unselectable">Back-End</li>
-                    <li class="content__container__list__item unselectable">Biotechnology</li>
+                    <li class="content__container__list__item ">Dev</li>
+                    <li class="content__container__list__item ">Front-End 3D</li>
+                    <li class="content__container__list__item ">Back-End</li>
+                    <li class="content__container__list__item ">Biotechnology</li>
                 </ul>
             </div>
         </div>
@@ -33,26 +33,26 @@
 
     <div class='whoami'>
         <div class='whoami-container'>
-            <h1 class="unselectable">Rodrigo é</h1>
-            <p class="unselectable">Desenvolvedor Júnior</p>
-            <p class="unselectable">Frontend em ambientes 3D</p>
-            <p class="unselectable">e Backend</p>
+            <h1 class="">Rodrigo é</h1>
+            <p class="">Desenvolvedor Júnior</p>
+            <p class="">Frontend em ambientes 3D</p>
+            <p class="">e Backend</p>
         </div>
         <div class='whoami-container'>
-            <h1 class="unselectable">Estudo</h1>
-            <p class="unselectable">Biotecnologia na Universidade Federal de Uberlândia.</p>
-            <p class="unselectable">Autodidata em desenvolvimento Web e em modelagem 3D.</p>
+            <h1 class="">Estudo</h1>
+            <p class="">Biotecnologia na Universidade Federal de Uberlândia.</p>
+            <p class="">Autodidata em desenvolvimento Web e em modelagem 3D.</p>
         </div>
         <div class='whoami-container'>
-            <h1 class="unselectable">Um pouco sobre mim</h1>
-            <p class="unselectable">
+            <h1 class="">Um pouco sobre mim</h1>
+            <p class="">
                 Me apaixonei por código na faculdade e desde então me dediquei a aprender mais e
                 mais no meu tempo livre.
             </p>
-            <p class='unselectable'>
+            <p class=''>
                 Desde pequeno fui apaixonado por Cinema, Animações, Livros, Música, Podcasts
             </p>
-            <p class='unselectable'>
+            <p class=''>
                 e intrigado pelo universo e biologia.
             </p>
         </div>
@@ -67,11 +67,11 @@
                 class='project-logo'
                 src="/static/imgs/coin.png">
             <div class='project-links'>
-                <H1 class='project-title unselectable'>Controle de Estoque de Leveduras</H1>
-                <p class='project-description unselectable'> Ferramenta de controle de estoque de leveduras da Coin Brewery</p>
+                <H1 class='project-title '>Controle de Estoque de Leveduras</H1>
+                <p class='project-description '> Ferramenta de controle de estoque de leveduras da Coin Brewery</p>
 
                 <div class='project-btns'>
-                        <button class='btn-p unselectable' id='coin-info'>+ informações</button>
+                        <button class='btn-p ' id='coin-info'>+ informações</button>
                 </div>
             </div>
         </div>
@@ -81,13 +81,13 @@
                 class='project-logo'
                 src="/static/imgs/bioinformatizado.jpg">
             <div class='project-links'>
-                <H1 class='project-title unselectable'>Bioinformatizado</H1>
-                <p class='project-description unselectable'> 
+                <H1 class='project-title '>Bioinformatizado</H1>
+                <p class='project-description '> 
                     Blog pessoal para manter um registro e disseminar informações sobre biotecnologia
                 </p>
 
                 <div class='project-btns'>
-                        <button class='btn-p unselectable' id='bioinformatizado-info'>+ informações</button>
+                        <button class='btn-p ' id='bioinformatizado-info'>+ informações</button>
                 </div>
             </div>
         </div>
@@ -97,13 +97,13 @@
                 class='project-logo'
                 src="/static/imgs/bioinfo-project-logo.png">
             <div class='project-links'>
-                <H1 class='project-title unselectable'>Projeto de Bioinformática</H1>
-                <p class='project-description unselectable'> 
+                <H1 class='project-title '>Projeto de Bioinformática</H1>
+                <p class='project-description '> 
                     Site com ferramentas de bioinformática.
                 </p>
 
                 <div class='project-btns'>
-                        <button class='btn-p unselectable' id ='bioinfo-project-info'>+ informações</button>
+                        <button class='btn-p ' id ='bioinfo-project-info'>+ informações</button>
                 </div>
             </div>
         </div>
