added BioInfoP carrousel imgs

--- a/src/index.html
+++ b/src/index.html
@@ -147,12 +147,13 @@
                 <h2 class='modal-ul-title'>Recursos</h2>
                 <ul class='modal-ul'>
                     <li class='modal-li'>Auth</li>
-                    <li class='modal-li'>Engine de busca</li>
+                    <li class='modal-li'>Barra de busca</li>
                     <li class='modal-li'>Filtros</li>
                     <li class='modal-li'>Paginação</li>
-                    <li class='modal-li'>Avisos de repiques próxima</li>
+                    <li class='modal-li'>Avisos de repiques próximos</li>
                     <li class='modal-li'>TODO para cada usuário</li>
                     <li class='modal-li'>Histórico de Atividades</li>
+                    <li class='modal-li'>Custom Tags</li>
                 </ul>
             </div>
             <div class='modal-ul-div production-ul'>
@@ -202,7 +203,7 @@
                     <li class='modal-li'>Auth</li>
                     <li class='modal-li'>Categorias</li>
                     <li class='modal-li'>Paginação</li>
-                    <li class='modal-li'>CKEditor</li>
+                    <li class='modal-li'>Custom tags</li>
                     <li class='modal-li'>Recursos modulares para possíveis editores</li>
                 </ul>
             </div>
@@ -230,9 +231,10 @@
             <button class='modal-quit' id='bioinfo-project-quit'>Voltar</button>
         </div>
         <div class='modal-carousel'>
-            <img class='modal-img' src="/static/imgs/coin-estoque.png">
-            <img class='modal-img' src="/static/imgs/coin-estoque.png">
-            <img class='modal-img' src="/static/imgs/coin-estoque.png">
+            <img class='modal-img' src="/static/imgs/bioInfoP-1.png">
+            <img class='modal-img' src="/static/imgs/bioInfoP-2.png">
+            <img class='modal-img' src="/static/imgs/bioInfoP-3.png">
+            <img class='modal-img' src="/static/imgs/bioInfoP-4.png">
 
             <a class="modal-back" >&#10094;</a>
             <a class="modal-forward" >&#10095;</a>
