carousel Classes Changed

--- a/src/index.html
+++ b/src/index.html
@@ -115,9 +115,9 @@
             <button class='modal-quit' id='coin-quit'>Voltar</button>
         </div>
         <div class='modal-carousel'>
-            <img class='modal-img' src="/static/imgs/coin-estoque.png">
-            <img class='modal-img' src="/static/imgs/coin-leveduras.png">
-            <img class='modal-img' src="/static/imgs/coin-form.png">
+            <img class='modal-img-coin' src="/static/imgs/coin-estoque.png">
+            <img class='modal-img-coin hide' src="/static/imgs/coin-leveduras.png">
+            <img class='modal-img-coin hide' src="/static/imgs/coin-form.png">
 
             <a class="modal-back" id='coin-back' >&#10094;</a>
             <a class="modal-forward"id='coin-forward' >&#10095;</a>
@@ -177,10 +177,10 @@
             <button class='modal-quit' id='bioinformatizado-quit'>Voltar</button>
         </div>
         <div class='modal-carousel'>
-            <img class='modal-img' src="/static/imgs/bioinformatizado-landing-page.png">
+            <img class='modal-img-bioinformatizado' src="/static/imgs/bioinformatizado-landing-page.png">
 
-            <a class="modal-back" >&#10094;</a>
-            <a class="modal-forward" >&#10095;</a>
+            <a class="modal-back" id='bioinformatizado-back'>&#10094;</a>
+            <a class="modal-forward" id='bioinformatizado-forward'>&#10095;</a>
         </div>
         <div class='modal-side'>
             <p class='modal-description'>
@@ -231,13 +231,13 @@
             <button class='modal-quit' id='bioinfo-project-quit'>Voltar</button>
         </div>
         <div class='modal-carousel'>
-            <img class='modal-img' src="/static/imgs/bioInfoP-1.png">
-            <img class='modal-img' src="/static/imgs/bioInfoP-2.png">
-            <img class='modal-img' src="/static/imgs/bioInfoP-3.png">
-            <img class='modal-img' src="/static/imgs/bioInfoP-4.png">
+            <img class='modal-img-bioinfop' src="/static/imgs/bioInfoP-1.png">
+            <img class='modal-img-bioinfop' src="/static/imgs/bioInfoP-2.png">
+            <img class='modal-img-bioinfop' src="/static/imgs/bioInfoP-3.png">
+            <img class='modal-img-bioinfop' src="/static/imgs/bioInfoP-4.png">
 
-            <a class="modal-back" >&#10094;</a>
-            <a class="modal-forward" >&#10095;</a>
+            <a class="modal-back" id='bioinfop-back'>&#10094;</a>
+            <a class="modal-forward" id='bioinfop-forward'>&#10095;</a>
         </div>
         <div class='modal-side'>
             <p class='modal-description'>
