--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,19 @@
 </head>
 
 <body>
+
+    <div class='loading-whiteout'></div>
+    <div class='loading-container'>
+        <img src='/static/imgs/loadingScreen/LOADING-SurfaceImperfection6-min.png'>
+        <div class='load-bar-container'>
+            <div class='load-snippets'>
+            <p class='load-texts'>Carregando</p>
+            </div>
+            <div class='load-bar'></div>
+            <button class='exit-load-btn hide'>GO</button>
+        </div>
+    </div>
+
     <canvas class="webgl-canvas"></canvas>
 
     <div class='homepage'>
