Added scroll down page

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,13 @@
 
     <canvas class="webgl-canvas"></canvas>
 
+    <div class='welcome-container'>
+        <h2 class='welcome-text'>Role para baixo para explorar</h2>
+        <div class='scroll-down-container'>
+            <div class='scroll-down'></div>
+        </div>
+    </div>
+
     <div class='homepage'>
         <div class='home'>
             <h1 class="home-text ">Rodrigo Cury</h1>
