Styled AboutMe cards

--- a/src/index.html
+++ b/src/index.html
@@ -43,41 +43,48 @@
             <div class="content__container">
                 <ul class="content__container__list">
                     <li class="content__container__list__item ">Dev</li>
-                    <li class="content__container__list__item ">Front-End 3D</li>
-                    <li class="content__container__list__item ">Back-End</li>
-                    <li class="content__container__list__item ">Biotechnology</li>
+                    <li class="content__container__list__item ">Frontend</li>
+                    <li class="content__container__list__item ">Backend</li>
+                    <li class="content__container__list__item ">Biotechnologia</li>
                 </ul>
             </div>
         </div>
     </div>
 
     <div class='whoami'>
-        <div class='whoami-container'>
-            <h1 class="">Rodrigo é</h1>
-            <p class="">Desenvolvedor Júnior</p>
-            <p class="">Frontend em ambientes 3D</p>
-            <p class="">e Backend</p>
+        <div class='whoami-container spine-right'>
+            <div class='whoami-wrapper'>
+                <h1 class="whoami-header">Rodrigo é</h1>
+                <p class="whoami-p">Desenvolvedor Júnior</p>    
+                <p class="whoami-p">Frontend em ambientes 3D</p>    
+                <p class="whoami-p">e Backend</p>
+            </div>  
+            <div class='spine'></div>
         </div>
         <div class='whoami-container'>
-            <h1 class="">Estudo</h1>
-            <p class="">Biotecnologia na Universidade Federal de Uberlândia.</p>
-            <p class="">Autodidata em desenvolvimento Web e em modelagem 3D.</p>
+            <div class='spine'></div>
+            <div class='whoami-wrapper'>
+                <h1 class="whoami-header">Estudo</h1>
+                <p class="whoami-p">Biotecnologia na Universidade Federal de Uberlândia.</p>
+                <p class="whoami-p">Autodidata em desenvolvimento Web e em modelagem 3D.</p>
+            </div>
         </div>
-        <div class='whoami-container'>
-            <h1 class="">Um pouco sobre mim</h1>
-            <p class="">
-                Me apaixonei por código na faculdade e desde então me dediquei a aprender mais e
-                mais no meu tempo livre.
-            </p>
-            <p class=''>
-                Desde pequeno fui apaixonado por Cinema, Animações, Livros, Música, Podcasts
-            </p>
-            <p class=''>
-                e intrigado pelo universo e biologia.
-            </p>
+        <div class='whoami-container spine-right'>
+            <div class='whoami-wrapper'>
+                <h1 class="whoami-header">Um pouco sobre mim</h1>
+                <p class="whoami-p">
+                    Me apaixonei por código na faculdade e desde então me dediquei a aprender mais e
+                    mais no meu tempo livre.
+                </p>
+                <p class='whoami-p'>
+                    Desde pequeno fui apaixonado por Cinema, Animações, Livros, Música, Podcasts
+                </p>
+                <p class='whoami-p'>
+                    e intrigado pelo universo e biologia.
+                </p>
+            </div>
+            <div class='spine'></div>
         </div>
-
-
     </div>
 
     <div class='projects-container'>
