Added MadeWith Page

--- a/src/index.html
+++ b/src/index.html
@@ -315,6 +315,67 @@
         </a>
     </div>
 
+    <div class='made-with-container'>
+        <div class='made-with-title'>
+            <h1 class='dots'>...</h1>
+            <h1>Feito com</h1>
+
+        </div>
+        <div class='made-with-wrapper'>
+            <h2 class='made-with-header'>Tecnologias</h2>
+            <h2 class='made-with-header'>Trivia</h2>
+            <h2 class='made-with-header'>Músicas</h2>
+            <h2 class='made-with-header'>Agradecimentos</h2>
+            <ul class='made-with-ul' id='made-with-tech'>
+                <li class='made-with-li'>Three.JS</li>
+                <li class='made-with-li'>GSAP</li>
+                <li class='made-with-li'>Howler</li>
+                <li class='made-with-li'>dat.GUI</li>
+                <li class='made-with-li'>Stats.js</li>
+                <li class='made-with-li'>Blender</li>
+                <li class='made-with-li'>Audacity</li>
+            </ul>
+            <ul class='made-with-ul'id='made-with-trivia'>
+                <li class='made-with-li'>Add later</li>
+                <li class='made-with-li'>Add later</li>
+                <li class='made-with-li'>Add later</li>
+                <li class='made-with-li'>Add later</li>
+                <li class='made-with-li'>Add later</li>
+            </ul>
+            <ul class='made-with-ul'id='made-with-music'>
+                <li class='made-with-li'>
+                    "The Journey" por
+                    <a href="https://pixabay.com/users/astrofreq-19902647/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=2582" target="_blank" rel="noopener noreferrer">
+                        astrofreq
+                    </a> 
+                    disponível em 
+                    <a href="https://pixabay.com/music/solo-guitar-the-journey-2582/"target="_blank" rel="noopener noreferrer">
+                        Pixabay
+                    </a>
+                </li>
+                <li class='made-with-li'>
+                    "Dreamy Piano" por
+                    <a href="https://pixabay.com/users/winkingfoxmusic-18210509/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=4049" target="_blank" rel="noopener noreferrer">
+                        WinkingFoxMusic
+                    </a> 
+                    disponível em 
+                    <a href="https://pixabay.com/music/modern-classical-dreamy-piano-soft-sound-ambient-background-4049/"target="_blank" rel="noopener noreferrer">
+                        Pixabay
+                    </a>
+                </li>
+            </ul>
+            <ul class='made-with-ul'id='made-with-thanks'>
+                <li class='made-with-li'>Amigos e Família pelo apoio e opiniões construtivas</li>
+                <li class='made-with-li'>
+                    <a href="https://bruno-simon.com/">
+                        Bruno Simon
+                    </a> 
+                    pelo ótimo curso
+                </li>
+            </ul>
+        </div>
+    </div>
+    
 </body>
 
 </html>
