--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                     <li class="content__container__list__item ">Dev</li>
                     <li class="content__container__list__item ">Frontend</li>
                     <li class="content__container__list__item ">Backend</li>
-                    <li class="content__container__list__item ">Biotechnologia</li>
+                    <li class="content__container__list__item ">Biotecnologia</li>
                 </ul>
             </div>
         </div>
