--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,20 @@
 
 <body>
 
-    <div class='loading-whiteout'></div>
+    <div class='loading-whiteout'>
+        <div class='poem-wrapper'>
+            <p class='poem-p'> Não vás gentilmente para esta boa noite </p>
+            <p class='poem-p'> Que a velhice arda e brade ao término do dia </p>
+            <p class='poem-p'> Fúria, fúria contra a morte da luz </p>
+            <br>
+            <p class='poem-p'> Embora os homens sábios em seu fim sabem que o escuro é o certo </p>
+            <p class='poem-p'> Porque as suas palavras bifurcaram nenhum relâmpago eles </p>
+            <p class='poem-p'> Não vão gentilmente para esta boa noite </p>
+            <p class='poem-author'>John Cale, Fragments of a Rainy Season</p>
+            <br>
+            <button class='enter-site'>Explorar</button>
+        </div>
+    </div>
     <div class='loading-container'>
         <img src='/static/imgs/loadingScreen/LOADING-SurfaceImperfection6-min.png'>
         <div class='load-bar-container'>
@@ -22,7 +35,7 @@
             <p class='load-texts'>Carregando</p>
             </div>
             <div class='load-bar'></div>
-            <button class='exit-load-btn hide'>GO</button>
+            <button class='exit-load-btn hide'>Decolar</button>
         </div>
     </div>
 
