--- a/src/index.html
+++ b/src/index.html
@@ -388,6 +388,11 @@
             </ul>
         </div>
     </div>
+
+    <div class='mute-btn-div'>
+        <img src="/static/imgs/mute/unmute-64.png" alt="" class='mute-btn'>
+        <img src="/static/imgs/mute/mute-64.png" alt="" class='unmute-btn hide'>
+    </div>
     
 </body>
 
