Added Tech Page

--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,17 @@
         </div>
     </div>
 
+    <div class='technologies-container'>
+        <h1 class='tech-header'>Tecnologias</h1>
+        <div class="move-mouse-div">
+            <p>Passe o mouse pelas logos</p>
+            <div class="mouse-move"></div>
+            <div class="tech-div">
+                <p>JS</p>
+            </div>
+        </div>
+    </div>
+
     <div class='projects-container'>
         <div class='project-card'>
             <div class='spine'></div>
