--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
             <p class='poem-p'> Embora os homens sábios em seu fim sabem que o escuro é o certo </p>
             <p class='poem-p'> Porque as suas palavras bifurcaram nenhum relâmpago eles </p>
             <p class='poem-p'> Não vão gentilmente para esta boa noite </p>
+            <p class='poem-p'>...</p>
             <p class='poem-author'>John Cale, Fragments of a Rainy Season</p>
             <br>
             <button class='enter-site'>Explorar</button>
