Added a base contact Page

--- a/src/index.html
+++ b/src/index.html
@@ -401,6 +401,10 @@
         </div>
     </div>
 
+    <div class='contact-container'>
+        <h1 class='contact-header'>Contate-me</h1>
+    </div>
+
     <div class='mute-btn-div'>
         <img src="/static/imgs/mute/unmute-64.png" alt="" class='mute-btn'>
         <img src="/static/imgs/mute/mute-64.png" alt="" class='unmute-btn hide'>
