fixed projects transition

--- a/src/index.html
+++ b/src/index.html
@@ -402,7 +402,11 @@
     </div>
 
     <div class='contact-container'>
-        <h1 class='contact-header'>Contate-me</h1>
+        <h1 class='contact-header'>Obrigado por visitar</h1>
+        <div class='contact-wrapper'>
+            <p class='contact-p'>Este site está em constante desenvolvimento</p>
+            <p class='contact-p'>Volte logo para ver as mudanças</p>
+        </div>
     </div>
 
     <div class='mute-btn-div'>
