--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
             <div class='project-links'>
                 <H1 class='project-title '>Projeto de Bioinformática</H1>
                 <p class='project-description '> 
-                    Site com ferramentas de bioinformática.
+                    Projeto pessoal para implementação de ferramentas de bioinformática.
                 </p>
 
                 <div class='project-btns'>
