Added Arrows to Welcome Container

--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,17 @@
     <canvas class="webgl-canvas"></canvas>
 
     <div class='welcome-container'>
-        <h2 class='welcome-text'>Role para baixo para explorar</h2>
+        <h2 class='welcome-text'>Role para baixo ou use as teclas para explorar</h2>
         <div class='scroll-down-container'>
             <div class='scroll-down'></div>
+        </div>
+        <div class='arrows-container'>
+            <div class='arrows-wrapper' id='arrow'>
+                <p class='arrows'>↑</p>
+            </div>
+            <div class='arrows-wrapper'>
+                <p class='arrows'>↓</p>
+            </div>
         </div>
     </div>
 
