Made with Changes

--- a/src/index.html
+++ b/src/index.html
@@ -351,12 +351,12 @@
     <div class='made-with-container'>
         <div class='made-with-title'>
             <h1 class='dots'>...</h1>
-            <h1>Feito com</h1>
+            <h1>Portifólio</h1>
 
         </div>
         <div class='made-with-wrapper'>
             <h2 class='made-with-header'>Tecnologias</h2>
-            <h2 class='made-with-header'>Trivia</h2>
+            <h2 class='made-with-header'>Desenvolvimento</h2>
             <h2 class='made-with-header'>Músicas</h2>
             <h2 class='made-with-header'>Agradecimentos</h2>
             <ul class='made-with-ul' id='made-with-tech'>
@@ -369,11 +369,11 @@
                 <li class='made-with-li'>Audacity</li>
             </ul>
             <ul class='made-with-ul'id='made-with-trivia'>
-                <li class='made-with-li'>Add later</li>
-                <li class='made-with-li'>Add later</li>
-                <li class='made-with-li'>Add later</li>
-                <li class='made-with-li'>Add later</li>
-                <li class='made-with-li'>Add later</li>
+                <li class='made-with-li'>150+ Hrs desenvolvendo o conceito</li>
+                <li class='made-with-li'>100+ Horas codando</li>
+                <li class='made-with-li'>Bastante Aprendizado</li>
+                <li class='made-with-li'>92 arquivos</li>
+                <li class='made-with-li'>Várias danças de comemoração</li>
             </ul>
             <ul class='made-with-ul'id='made-with-music'>
                 <li class='made-with-li'>
