--- a/src/index.html
+++ b/src/index.html
@@ -377,7 +377,7 @@
             </ul>
             <ul class='made-with-ul'id='made-with-music'>
                 <li class='made-with-li'>
-                    "The Journey" por
+                    'The Journey' por
                     <a href="https://pixabay.com/users/astrofreq-19902647/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=2582" target="_blank" rel="noopener noreferrer">
                         astrofreq
                     </a> 
@@ -387,7 +387,7 @@
                     </a>
                 </li>
                 <li class='made-with-li'>
-                    "Dreamy Piano" por
+                    'Dreamy Piano' por
                     <a href="https://pixabay.com/users/winkingfoxmusic-18210509/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=4049" target="_blank" rel="noopener noreferrer">
                         WinkingFoxMusic
                     </a> 
